[project]
name = "Automated-AI-Web-Researcher-Ollama"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ssghost", email = "ssprof0@gmail.com"},
]
dependencies = [
    "llama-cpp-python",
    "duckduckgo-search",
    "colorama",
    "requests",
    "beautifulsoup4",
    "trafilatura",
    "readchar",
    "keyboard",
    "tqdm",
    "urllib3",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "tavily-python",
    "exa-py",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
